--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ description: A simple command-line application.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.16.0"
 
 dependencies:
   flutter:
